--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,47 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-blog/src/style.css";
 
 /* start here */
+
+.title {
+  font-weight: var(--ui-block-title-font-weight);
+}
+
+.section__inner {
+  max-width: 100%;
+}
+
+.article {
+  padding: 0;
+  text-align: center;
+  display: flex;
+
+  &__picture {
+    &-wrapper {
+      order: -1;
+    }
+  }
+
+  &__title {
+    font-weight: 600;
+    order: -1;
+    margin-bottom: 20px;
+  }
+
+  &__date {
+    font-weight: var(--ui-heading-lg-font-weight);
+    text-transform: uppercase;
+  }
+
+  &__text {
+    max-width: 702px;
+    margin: 0 auto 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .article {
+    &__text {
+      padding: 0 15px;
+    }
+  }
+}
