--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,37 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.article {
+  &__content {
+    justify-content: flex-start;
+
+    @media (min-width: 992px) {
+      max-width: 60%;
+      flex-basis: 60%;
+      padding-left: 50px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 35px;
+  }
+
+  &__subtitle {
+    font-size: var(--ui-small-size);
+    color: var(--ui-small-color);
+    margin-top: 0;
+    margin-bottom: 35px;
+  }
+
+  &__picture-wrapper {
+
+    @media (min-width: 992px) {
+      max-width: 40%;
+      flex-basis: 40%;
+    }
+  }
+
+  &__text {
+    margin-bottom: 0;
+  }
+}
