--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
 
 /* start here */
 
+.section__inner {
+  max-width: none;
+}
+
 .title {
   font-size: var(--ui-block-title-size);
   font-family: var(--ui-block-title-font-family);
@@ -13,20 +17,33 @@
 .article {
   padding: 0;
   text-align: center;
+  display: inline-flex;
+  flex-direction: column;
 
-  &__date {
+  &__picture-wrapper {
+    order: 1;
+  }
+
+  &__meta {
     text-transform: uppercase;
+    order: 3;
+  }
+
+  &__title {
+    order: 2;
   }
 
   &__text {
     padding: 0 15px;
     max-width: 690px;
     margin: 0 auto 20px;
+    order: 4;
   }
 
   &__link {
     text-transform: uppercase;
     font-size: calc(var(--ui-small-size) * 0.9166);
+    order: 5;
   }
 }
 
