--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+
+.description {
+  font-size: var(--ui-subtitle-size);
+  font-family: var(--ui-subtitle-font-family);
+  line-height: var(--ui-subtitle-line-height);
+  letter-spacing: var(--ui-subtitle-letter-spacing);
+  font-weight: var(--ui-subtitle-font-weight);
+}
+
+.button {
+  text-transform: uppercase;
+}
