hot fix for divider (#395)

--- a/src/style.css
+++ b/src/style.css
@@ -162,8 +162,9 @@
 .article__category + .article__date::after {
   content: "|";
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 0;
+  transform: translateY(-50%);
 }
 
 .article__title {
