--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,67 @@
 @import "wireframe-series-2-cta/src/style.css";
 
 /* start here */
+
+.title {
+  color: var(--ui-dark-shade-color);
+  font-size: var(--ui-block-title-size);
+  font-family: var(--ui-block-title-font-family);
+  font-weight: var(--ui-block-title-font-weight);
+}
+
+.subtitle {
+  font-size: calc(var(--ui-subtitle-size)*1.111);
+  font-family: var(--ui-subtitle-font-family);
+  font-weight: var(--ui-subtitle-font-weight);
+}
+
+.section {
+  &__inner {
+
+    @media (min-width: 768px) {
+      max-width: 1170px;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+    }
+  }
+
+  &__header {
+
+    @media (min-width: 768px) {
+      width: 49%;
+      max-width: 470px;
+      padding: 0 15px;
+      text-align: left;
+    }
+  }
+}
+
+.form {
+
+  @media (min-width: 768px) {
+    width: 49%;
+    max-width: 470px;
+    padding: 0 15px;
+  }
+
+  &__field,
+  textarea {
+    text-align: center;
+    border-radius: 0;
+    border: 1px solid var(--ui-light-accent-color);
+    font-size: calc(var(--ui-text-size)*0.875);
+    background-color: var(--ui-light-shade-color);
+  }
+
+  textarea {
+    padding-top: 14px;
+    min-height: 100px;
+    resize: none;
+  }
+
+  label {
+    font-size: 0;
+    margin-bottom: 0;
+  }
+}
