--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,8 @@
 .title {
   margin-bottom: 45px;
   text-transform: uppercase;
+  font-size: var(--ui-block-title-size);
+  color: var(--ui-block-title-color);
 }
 
 .article {
@@ -28,34 +30,33 @@
     &-wrapper {
       order: 1;
       width: 100%;
+      margin-bottom: 25px;
     }
   }
 
   &__title {
     order: 2;
     text-transform: uppercase;
+    margin-bottom: 20px;
+    color: var(--ui-heading-color);
     font-size: calc(var(--ui-subheading-size) * 0.83);
 
     @media(min-width: 480px) {
-      font-size: var(--ui-heading-size);
+      font-size: var(--ui-subheading-size);
     }
 
     @media(min-width: 768px) {
       font-size: var(--ui-text-size);
-      max-width: 290px;
     }
 
     @media(min-width: 992px) {
-      font-size: calc(var(--ui-subheading-size) * 0.87);
-    }
-
-    @media(min-width: 1200px) {
-      font-size: var(--ui-heading-size);
+      font-size: var(--ui-subheading-size);
     }
   }
 
   &__meta {
     order: 3;
+    margin-bottom: 18px;
     font-size: calc(var(--ui-text-size) * 0.87);
     font-family: var(--ui-text-font-family);
     color: var(--ui-brand-color);
@@ -83,6 +84,12 @@
 
   &__text {
     order: 4;
+    margin-bottom: 22px;
+    font-family: var(--ui-text-font-family);
+    color: var(--ui-text-color);
+    font-size: var(--ui-text-size);
+    line-height: var(--ui-text-line-height);
+    font-weight: var(--ui-text-font-weight);
   }
 
   &__link {
