--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,12 @@
   font-size: var(--ui-hero-title-size);
   letter-spacing: calc(var(--ui-hero-title-letter-spacing) * 1.6);
   line-height: var(--ui-hero-title-line-height);
-  font-weight: var(--ui-hero-title-font-weight);
+  font-weight: 600;
   margin-bottom: 38px;
 }
 
 .section {
   padding-top: 320px;
-  position: relative;
-  z-index: 0;
 
   &__inner {
 
