--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@
   max-width: 640px;
   margin-right: auto;
   margin-left: auto;
-  font-weight: 500;
+  font-weight: var(--ui-subtitle-font-weigh);
   font-family: var(--ui-subtitle-font-family);
   font-size: var(--ui-subtitle-size);
   line-height: var(--ui-subtitle-line-height);
