--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
     @media (min-width: 992px) {
       max-width: 470px;
       padding: 0;
-      margin-bottom: 35px;
+      margin-bottom: 32px;
     }
   }
 }
@@ -36,7 +36,7 @@
     max-width: 435px;
     font-size: calc(var(--ui-block-title-size) * 2);
     line-height: calc(var(--ui-block-title-line-height) * 0.66666);
-    margin-bottom: 40px;
+    margin-bottom: 25px;
   }
 }
 
@@ -47,6 +47,7 @@
     text-align: left;
     max-width: 285px;
     font-size: calc(var(--ui-subtitle-size) * 1.11);
+    line-height: calc(var(--ui-subtitle-line-height) * 0.92);
   }
 }
 
