--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,17 @@
 /* start here */
 
 .section {
-  padding: 322px 0 105px;
+  
+  @media (min-width: 768px) {
+    padding: 322px 0 105px;
+  }
 }
 
 .title {
   max-width: 770px;
   margin: 0 auto 30px;
   font-size: calc(var(--ui-block-title-size)*2);
-  font-weight: 700;
+  font-weight: 600;
   line-height: var(--ui-hero-title-line-height);
   letter-spacing: var(--ui-hero-title-letter-spacing);
 }
