--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,13 @@
 
 .title {
   font-weight: calc(var(--ui-block-title-font-weight) + 100);
-  letter-spacing: calc(var(--ui-block-title-letter-spacitng) - 0.9px);
+  letter-spacing: -1.5px;
 }
 
 .description {
   font-family: var(--ui-subtitle-font-family);
   font-size: var(--ui-subtitle-size);
   font-weight: var(--ui-block-title-font-weight);
-  letter-spacing: var(--ui-subtitle-letter-spacitng);
 }
 
 .button {
