--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+.title {
+  font-weight: calc(var(--ui-block-title-font-weight) + 100);
+  letter-spacing: -1.5px;
+}
 
 .description {
   font-size: var(--ui-subtitle-size);
