--- a/src/style.css
+++ b/src/style.css
@@ -17,8 +17,8 @@
   flex-wrap: wrap;
   justify-content: center;
 
-  &--only-logo:last-child {
-    margin-bottom: -30;
+  &--only-logo {
+    margin-bottom: -30px;
 
     @media (min-width: 992px) {
       margin-bottom: -30px;
@@ -44,7 +44,7 @@
     margin-bottom: 30px;
   }
 
-  @media (min-width: 1170px) {
+  @media (min-width: 1200px) {
     flex-basis: 16.66%;
     width: 16.66%;
   }
@@ -56,10 +56,10 @@
   &__image {
     width: 100%;
   }
-}
 
-.item--logo .item__picture-wrapper {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 170px;
+  &__picture-wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 170px;
+  }
 }
