--- a/src/style.css
+++ b/src/style.css
@@ -1,248 +1,181 @@
 .section {
   min-width: 320px;
   padding: 30px 0;
+
+  /* background-color: var(--ui-block-bg); */
   font-size: var(--ui-text-size);
   color: var(--ui-text-color);
   line-height: var(--ui-text-line-height);
   font-weight: var(--ui-text-font-weight);
   font-family: var(--ui-text-font-family);
   word-wrap: break-word;
-}
 
-@media (min-width: 992px) {
-  .section {
+  @media (--ui-medium-devices) {
     padding: 60px 0;
   }
-}
 
-.section--column .article {
-  flex-direction: column;
-  align-items: center;
-}
-
-.section--column .article__picture {
-  max-width: none;
-}
-
-.section--column .article__content {
-  max-width: none;
-  margin-bottom: 40px;
-}
-
-.section--column .article__picture + .article__content {
-  margin-top: 30px;
-  margin-bottom: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.section--column .btns-group {
-  justify-content: center;
-}
-
-.section__inner {
-  max-width: var(--ui-content-container);
-  margin: 0 auto;
-  padding: var(--ui-content-gutter);
-}
-
-.article {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-@media (min-width: 768px) {
-  .article {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
+  &__inner {
+    max-width: var(--ui-content-container);
+    margin: 0 auto;
+    padding: var(--ui-content-gutter);
   }
 }
 
-.article__picture {
-  position: relative;
-  width: 100%;
-  min-height: 200px;
-  padding-top: 35.56%;
-  order: -1;
-  background-color: var(--ui-media-bg);
-}
-
-@media (min-width: 768px) {
-  .article__picture {
-    max-width: 48.7%;
-    flex-basis: 50%;
-    order: unset;
-  }
-}
-
-.article__picture img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-}
-
-.article__content {
-  display: flex;
-  padding: 30px 0 0;
-  flex-direction: column;
-  justify-content: center;
-}
-
-@media (min-width: 768px) {
-  .article__content {
-    max-width: 48.8%;
-    padding-top: 0;
-    flex-basis: 50%;
-  }
-}
-
-.article__title {
-  width: 100%;
-  margin-bottom: 10px;
-  font-family: var(--ui-block-title-font-family);
-  font-size: var(--ui-block-title-size);
-  font-weight: var(--ui-block-title-font-weight);
-  line-height: var(--ui-block-title-line-height);
-  color: var(--ui-block-title-color);
-  text-align: left;
-}
-
-@media (min-width: 992px) {
-  .article__title {
-    margin-top: 0;
-  }
-}
-
-.article__subtitle {
-  width: 100%;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  font-family: var(--ui-subtitle-font-family);
-  font-size: var(--ui-subtitle-size);
-  font-weight: var(--ui-subtitle-font-weight);
-  line-height: var(--ui-subtitle-line-height);
-  color: var(--ui-subtitle-color);
-}
-
-.article__subtitle--socials {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-.article__text {
-  margin-bottom: 30px;
-}
-
-.article__socials {
-  display: flex;
-  max-width: 237px;
-  align-items: center;
-}
-
-.social-title {
-  margin-right: 20px;
-}
-
-.article .article__title + .article__socials {
-  margin-top: 20px;
-}
-
-.article .article__subtitle + .article__socials {
-  margin-top: 20px;
-}
-
-.article .article__subtitle ~ .btns-group {
-  margin-top: 40px;
-}
-
-.article .article__text + .btns-group {
-  margin-top: 10px;
-}
-
-.socials {
-  display: flex;
-}
-
-.socials__item {
-  margin-right: 15px;
-}
-
-.socials__item:last-child {
-  margin-right: 0;
-}
-
-.socials__link {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  padding: 7px;
-  border-radius: 50%;
-  background-color: var(--ui-icon-color);
-}
-
-.socials__link:hover,
-.socials__link:active,
-.socials__link:focus {
-  background-color: var(--ui-link-hover-color);
-}
-
-.socials__icon {
-  max-width: 100%;
-  max-height: 100%;
-  fill: var(--ui-light-shade-color);
-}
-
-.btns-group {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.btns-group:only-child {
-  margin-top: 10px;
-}
-
-@media (min-width: 480px) {
-  .button {
-    width: auto;
-    margin-right: 20px;
-  }
-}
-
-.button:last-child {
-  margin-right: 0;
-}
-
-.link {
-  display: inline-block;
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
+.title {
   text-align: center;
-  color: var(--ui-link-color);
-  word-wrap: break-word;
-}
+  text-transform: uppercase;
+  font-size: calc(var(--ui-block-title-size) * 0.75);
+  color: var(--ui-block-title-color);
+  line-height: var(--ui-block-title-line-height);
+  font-family: var(--ui-block-title-font-family);
+  font-weight: var(--ui-block-title-font-weight);
 
-@media (min-width: 480px) {
-  .link {
-    width: auto;
-    margin-right: 20px;
+  @media (--ui-tablet-devices) {
+    font-size: calc(var(--ui-block-title-size) * 1.4375);
   }
 }
 
-.link:last-child {
-  margin-right: 0;
+.counter {
+  display: flex;
+  width: 100%;
+  max-width: 970px;
+  margin: 30px auto 20px;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+
+  @media (--ui-phone-devices) {
+    flex-wrap: nowrap;
+  }
+
+  @media (--ui-tablet-devices) {
+    width: auto;
+    margin: 40px auto 20px;
+  }
+
+  &__item {
+    display: flex;
+    padding: 0 10px;
+    margin-top: 20px;
+    text-align: center;
+    flex: 33%;
+    flex-direction: column;
+    justify-content: center;
+    text-transform: uppercase;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    @media (--ui-phone-devices) {
+      flex: auto;
+      margin-top: 0;
+      margin-right: 16px;
+    }
+
+    @media (--ui-tablet-devices) {
+      width: 166px;
+      height: 166px;
+      max-width: 180px;
+      margin-right: 36px;
+      border: 1px solid var(--ui-border-color);
+      border-radius: 4px;
+    }
+
+    @media (--ui-medium-devices) {
+      max-width: 190px;
+      margin: 0 20px;
+    }
+  }
+
+  &__text {
+    max-width: 100%;
+    font-size: calc(var(--ui-text-size) * 0.9);
+
+    @media (--ui-tablet-devices) {
+      font-size: var(--ui-text-size);
+    }
+  }
+
+  &__number {
+    display: block;
+    font-size: calc(var(--ui-block-title-size) * 0.75);
+    color: var(--ui-block-title-color);
+    line-height: var(--ui-block-title-line-height);
+    font-family: var(--ui-block-title-font-family);
+    font-weight: 600;
+
+    @media (--ui-tablet-devices) {
+      font-size: calc(var(--ui-block-title-size) * 1.4375);
+    }
+  }
 }
 
-.link:hover,
-.link:focus,
-.link:active {
-  color: var(--ui-link-hover-color);
-  text-decoration: none;
+.counter__item:nth-last-of-type(4),
+.counter__item:nth-last-of-type(4) ~ .counter__item {
+  flex: 40%;
+}
+
+.content {
+  margin: 0 auto;
+
+  @media (--ui-tablet-devices) {
+    max-width: 425px;
+  }
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__text {
+    max-width: 100%;
+    font-size: calc(var(--ui-text-size) * 1.25);
+    text-align: center;
+
+    &:first-child {
+      margin-top: 40px;
+    }
+  }
+
+  &__title {
+    max-width: 100%;
+    margin-top: 40px;
+    margin-bottom: 0;
+    text-align: center;
+    font-size: calc(var(--ui-heading-size) * 0.8334);
+    color: var(--ui-heading-color);
+    line-height: var(--ui-heading-line-height);
+    font-family: var(--ui-heading-font-family);
+    font-weight: var(--ui-heading-font-weight);
+
+    @media (--ui-tablet-devices) {
+      font-size: calc(var(--ui-heading-size) * 1.33);
+    }
+  }
+
+  .button {
+    width: 100%;
+    max-width: 100%;
+    margin-top: 40px;
+
+    @media (--ui-phone-devices) {
+      width: auto;
+    }
+  }
+
+  .link {
+    margin-top: 40px;
+    text-decoration: underline;
+    font-size: var(--ui-text-size);
+    color: var(--ui-link-color);
+    transition: color .2s ease-in;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: var(--ui-link-hover-color);
+    }
+  }
 }
