--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,12 @@
   }
 
   &__inner {
-    max-width: 1740px;
+    max-width: none;
   }
+}
+
+.title {
+  font-weight: 600;
 }
 
 .items-wrapper {
@@ -35,7 +39,6 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  outline: none;
   border: 0;
 
   @media (min-width: 768px) {
@@ -57,9 +60,15 @@
     width: 100%;
   }
 
-  &__picture-wrapper {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 170px;
+  &--logo {
+    .item__picture-wrapper {
+      margin: 0 auto;
+      width: 100%;
+      max-width: 170px;
+
+      @media (min-width: 768px) {
+        margin-right: auto;
+      }
+    }
   }
 }
