--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,42 @@
 @import "wireframe-zapdos-process/src/style.css";
 
 .title {
-  font-weight: calc(var(--ui-block-title-font-weight) + 200);
+  font-weight: 600;
   letter-spacing: var(--ui-block-title-letter-spacitng);
 }
 
 .article {
+
+  @media (min-width: 768px) {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+
+  @media (min-width: 992px) {
+    flex-basis: 33.333%;
+    max-width: 33.333%;
+  }
+
   &__content {
-    padding-left: 53px;
+    padding-left: 38px;
 
     &::before {
       top: -3px;
       background-color: var(--ui-light-shade-color);
-      color: #c7c7c7;
+      color: var(--ui-subtitle-color);
       font-family: var(--ui-heading-font-family);
       font-size: var(--ui-heading-size);
       font-weight: var(--ui-block-title-font-weight);
+      justify-content: left;
     }
   }
 
   &__title {
-    font-weight: calc(var(--ui-block-title-font-weight) + 100);
+    font-weight: 600;
     letter-spacing: var(--ui-block-title-letter-spacitng);
   }
 }
 
 .button {
-  font-weight: calc(var(--ui-block-title-font-weight) + 200);
   text-transform: uppercase;
 }
