--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,26 @@
 @import "wireframe-zapdos-projects/src/style.css";
 
 .title {
-  font-weight: calc(var(--ui-block-title-font-weight) + 100);
+  font-weight: 600;
   letter-spacing: -1px;
 }
 
 .article {
+  &__content {
+    padding: 23px 0;
+    padding-left: 35px;
+  }
+
   &__title {
     margin-bottom: 18px;
     order: -1;
-    font-weight: calc(var(--ui-block-title-font-weight) + 100);
+    font-weight: 600;
     letter-spacing: -1px;
   }
 
   &__caption {
     margin-bottom: 10px;
-    font-weight: calc(var(--ui-block-title-font-weight) + 100);
+    font-weight: 600;
   }
 
   &__text {
