--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   font-weight: var(--ui-block-title-font-weight);
   letter-spacing: var(--ui-block-title-letter-spacitng);
   line-height: var(--ui-block-title-line-height);
+  margin-bottom: 30px;
 }
 
 .article {
@@ -17,6 +18,7 @@
   padding: 0 0 50px;
   margin-left: 15px;
   margin-right: 15px;
+  margin-bottom: 35px;
 
   &__picture-wrapper {
     order: 1;
@@ -35,6 +37,7 @@
   &__title {
     order: 2;
     padding: 0 30px;
+    margin-bottom: 35px;
     max-width: 90%;
   }
 
