--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
 .article {
   &__text {
     max-width: 520px;
-    color: #87888c;
+    color: var(--ui-subtitle-color);
     font-size: var(--ui-subtitle-size);
     font-weight: var(--ui-subtitle-font-weight);
   }
@@ -25,28 +25,26 @@
   &__title {
     font-weight: 600;
     letter-spacing: -1px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 20px;
+    }
   }
 
   &__content {
     width: 100%;
-    padding: 30px 10px 0;
-  }
-}
+    padding-right: 10px;
+    padding-left: 10px;
 
-@media (min-width: 768px) {
-  .article {
-    &__title {
-      margin-bottom: 20px;
+    @media (min-width: 768px) {
+      padding-right: 20px;
+      padding-left: 20px;
     }
 
-    &__content {
-      padding: 30px 0 0 20px;
+    @media (min-width: 992px) {
+      padding-right: 50px;
+      padding-left: 50px;
     }
   }
 }
 
-@media (min-width: 992px) {
-  .article__content {
-    padding: 30px 0 0 50px;
-  }
-}
