--- a/src/style.css
+++ b/src/style.css
@@ -12,22 +12,13 @@
 }
 
 .article {
-
-  @media (min-width: 768px) {
-    justify-content: flex-start;
-  }
-
   &__content {
-    max-width: 475px;
-    flex-basis: 475px;
     padding: 15px;
-    text-align: center;
 
     @media (min-width: 768px) {
       padding-top: 60px;
       padding-bottom: 50px;
       padding-left: 44px;
-      text-align: left;
     }
 
     @media (min-width: 992px) {
@@ -36,36 +27,20 @@
     }
 
     @media (min-width: 1200px) {
-      padding-top: 14.5%;
-      padding-bottom: 13.5%;
+      padding-top: 284px;
+      padding-bottom: 255px;
+      padding-left: 44px;
     }
   }
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     letter-spacing: -1.2px;
-    text-align: center;
-
-    @media (min-width: 768px) {
-      text-align: left;
-    }
   }
 
   &__text {
     margin-bottom: 20px;
-    white-space: normal;
-
-    @media (min-width: 992px) {
-      white-space: pre-wrap;
-    }
-  }
-}
-
-.btns-group {
-  justify-content: center;
-
-  @media (min-width: 768px) {
-    justify-content: flex-start;
+    max-width: 445px;
   }
 }
 
