--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,10 @@
   &__text {
     margin-bottom: 20px;
     white-space: pre-wrap;
-    max-width: 400px;
+
+    @media (min-width: 768px) {
+      max-width: 400px;
+    }
   }
 }
 
