--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,10 @@
 
   &__text {
     margin-bottom: 20px;
-    max-width: 445px;
+
+    @media (min-width: 768px) {
+      max-width: 445px;
+    }
   }
 }
 
