--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,11 @@
 
   &__pic-link {
     order: 1;
-    margin-bottom: 36px;
+    margin-bottom: 16px;
+
+    @media (min-width: 992px) {
+      margin-bottom: 36px;
+    }
   }
 
   &__pic {
@@ -71,9 +75,14 @@
   }
 
   &__position {
-    margin-bottom: 18px;
     order: 3;
+    margin-bottom: 18px;
     letter-spacing: 0.13px;
+  }
+
+  &__socials {
+    order: 4;
+    margin-bottom: 17px;
   }
 
   &__desc {
@@ -84,11 +93,7 @@
     white-space: pre-wrap;
 
     @media (min-width: 992px) {
-      max-wdith: 100%;
+      max-width: 100%;
     }
   }
-}
-
-.socials {
-  order: 4;
 }
