--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,22 @@
 @import "wireframe-zapdos-awards/src/style.css";
 
 .section {
-  border-bottom: 1px solid var(--ui-light-shade-color);
 
-  @media (min-width: 1200px) {
+  @media (min-width: 992px) {
+    padding-top: 93px;
     padding-bottom: 93px;
   }
 
   &__inner {
-    
+
     @media (min-width: 1200px) {
-      max-width: 1670px;
+      max-width: none;
     }
   }
 }
 
 .title {
   letter-spacing: -1.1px;
-
-  @media (min-width: 1200px) {
-    margin-top: 62px;
-  }
 }
 
 .item {
@@ -44,14 +40,14 @@
     transform: translate(-50%, -50%);
     object-fit: contain;
   }
-  
-  &:nth-child(3) {
+
+  &:nth-of-type(3) {
     .item__image {
       padding: 20.5%;
     }
   }
 
-  &:nth-child(5) {
+  &:nth-of-type(5) {
     .item__image {
       padding: 17%;
     }
