--- a/src/style.css
+++ b/src/style.css
@@ -6,27 +6,28 @@
   font-size: var(--ui-block-title-size);
   color: var(--ui-hero-title-color);
   font-weight: var(--ui-block-title-font-weight);
-  font-family: var(--ui-block-title-font-family);
+  margin-bottom: 40px;
 }
 
 .item {
   background-color: #fff;
-  padding: 50px;
+  padding: 20px;
   border-radius: 10px;
   box-sizing: border-box;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
   &__title {
     color: var(--ui-brand-color);
-    font-family: var(--ui-text-font-family);
     font-weight: var(--ui-heading-lg-font-weight);
+    border-bottom-style: inherit;    ;
+    padding-bottom: 7px;
   }
 
   &__content {
     color: var(--ui-dark-shade-color);
-    font-family: var(--ui-text-font-family);
     font-size: var(--ui-text-size);
+    padding-top: 5px;
   }
 
 }
