finish style design block

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,61 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 768px) {
+    padding-top: 11.19%;
+    padding-bottom: 5.2%;
+  }
+
+  &__inner {
+
+    @media (min-width: 768px) {
+      max-width: 100%;
+      padding-left: 0;
+    }
+  }
+}
+
+.article {
+  position: relative;
+
+  &__picture {
+
+    @media (min-width: 992px) {
+      padding-top: 101%;
+    }
+  }
+
+  &__title {
+    text-transform: uppercase;
+
+    @media (min-width: 768px) {
+      text-align: center;
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      margin-bottom: 0;
+      padding-bottom: 2.45%;
+    }
+
+    @media (min-width: 992px) {
+      padding-bottom: 3.45%;
+    }
+  }
+
+  &__content {
+
+    @media (min-width: 992px) {
+      padding-left: 50px;
+    }
+  }
+
+  &__text {
+
+    @media (min-width: 768px) {
+      max-width: 420px;
+    }
+  }
+}
