--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,13 @@
   color: var(--ui-light-shade-color);
   font-family: var(--ui-hero-title-font-family);
   font-weight: var(--ui-hero-title-font-weight);
-  margin-bottom: 34px;
+  font-size: calc(var(--ui-hero-title-size) * 0.5);
+  margin-bottom: 40px;
+  max-width: 870px;
+
+  @media (min-width: 768px) {
+    font-size: var(--ui-hero-title-size);
+  }
 }
 
 .subtitle {
@@ -15,4 +21,9 @@
   font-family: var(--ui-subtitle-font-family);
   font-weight: var(--ui-subtitle-font-weight);
   line-height: var(--ui-subtitle-line-height);
+  max-width: 660px;
+}
+
+.btns-group {
+  margin-top: 65px;
 }
