--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,35 @@
-@import "wireframe-default-master/src/style.css";
+@import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+
+.title {
+  font-size: calc(var(--ui-hero-title-size) * 0.55);
+  text-transform: uppercase;
+  margin-bottom: 48px;
+  margin-top: 100px;
+}
+
+.description {
+  font-size: var(--ui-subtitle-size );
+  max-width: 754px;
+  margin-bottom: 57px;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.6;
+}
+
+.button {
+  margin-bottom: 50px;
+}
+
+@media (min-width: 479px) {
+  .title {
+    font-size: calc(var(--ui-hero-title-size) * 0.7);
+    margin-bottom: 68px;
+    margin-top: 235px;
+  }
+
+  .button {
+    margin-bottom: 125px;
+  }
+}
