--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,39 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.section {
+  &__inner {
+    max-width: 1000px;
+  }
+}
+
+.article {
+  &__title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 36px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 68px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    &__picture-wrapper {
+      margin-right: 28px;
+    }
+
+    &__picture {
+      min-height: 346px;
+
+    }
+
+    &__content {
+      padding-left: 20px;
+    }
+  }
+
+  &__text {
+    margin-bottom: 12px;
+  }
+}
