--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 @import "wireframe-zapdos-gallery/src/style.css";
 
 /* start here */
+
+.item {
+  margin: 0;
+  padding: 7px;
+}
+
+.section__header {
+  display: none;
+}
+
