--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,51 @@
 @import "wireframe-series-2-cta/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding: 100px 0;
+  }
+
+  &__inner {
+
+    @media (min-width: 992px) {
+      max-width: 600px;
+    }
+  }
+
+  &__header {
+
+    @media (min-width: 992px) {
+      margin-bottom: 80px;
+      padding: 0;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+}
+
+.form {
+
+  @media (min-width: 992px) {
+    padding: 0 2.5%;
+  }
+
+  &__item {
+    font-size: 0;
+    margin-bottom: 15px;
+  }
+
+  &__field {
+    font-size: var(--ui-text-size);
+    background-color: var(--ui-light-shade-color);
+    border: 1px solid var(--ui-link-hover-color);
+    margin-top: 0;
+  }
+
+  &__button {
+    margin-top: 0;
+  }
+}
