--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,60 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.article {
+  padding-left: 0;
+  padding-right: 0;
+
+  @media (min-width: 992px) {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  &__picture {
+    min-height: 345px;
+
+    img {
+
+      @media (min-width: 768px) {
+        width: 97%;
+      }
+    }
+  }
+
+  &__content {
+
+    @media (min-width: 768px) {
+      padding-left: 35px;
+    }
+  }
+
+  &__title {
+    text-transform: uppercase;
+    text-align: center;
+
+    @media (min-width: 480px) {
+      margin-bottom: 40px;
+    }
+
+    @media (min-width: 768px) {
+      margin-bottom: 70px;
+    }
+  }
+
+  &__text {
+    margin-bottom: 0;
+    padding-top: 8px;
+
+    @media (min-width: 768px) {
+      padding-right: 23px;
+    }
+  }
+}
