--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
 @import "wireframe-zapdos-why/src/style.css";
 
 /* start here */
+
+.title {
+  text-transform: uppercase;
+}
+
+.item {
+  &__top-element {
+    height: 96px;
+    margin: 0 auto 25px;
+    
+    &:after {
+      content: "";
+      display: block;
+      width: 30px;
+      margin: auto;
+      height: 2px;
+      background-color: var(--ui-brand-color);
+    }
+  }
+}
