--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
 .section {
 
   @media (min-width: 768px) {
-    padding-top: 11.19%;
-    padding-bottom: 5.2%;
+    padding-top: 90px;
+    padding-bottom: 100px;
   }
 
   &__inner {
@@ -32,16 +32,7 @@
 
     @media (min-width: 768px) {
       text-align: center;
-      position: absolute;
-      bottom: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      margin-bottom: 0;
-      padding-bottom: 2.45%;
-    }
-
-    @media (min-width: 992px) {
-      padding-bottom: 3.45%;
+      margin-bottom: 68px;
     }
   }
 
