--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,27 @@
 @import "wireframe-zapdos-about/src/style.css";
 
 /* start here */
+
+.article {
+  flex-wrap: wrap;
+
+  &__picture-wrapper {
+    max-width: 100%;
+    max-height: 470px;
+    flex-basis: 100%;
+  }
+
+  &__content {
+    max-width: 100%;
+    padding: 0;
+    margin-top: 35px;
+    flex-basis: 100%;
+    box-sizing: border-box;
+  }
+
+  &__text {
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
