--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,85 @@
 @import "wireframe-series-2-cta/src/style.css";
 
 /* start here */
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 9.895%;
+    padding-bottom: 10.416%;
+  }
+
+  &__inner {
+
+    @media (min-width: 992px) {
+      max-width: 1200px;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+
+  &__header {
+
+    @media (min-width: 992px) {
+      padding: 0;
+      margin-bottom: 31px;
+    }
+  }
+}
+
+.title {
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: -0.15px;
+
+  @media (min-width: 992px) {
+    margin-bottom: 64px;
+  }
+}
+
+.subtitle {
+
+  @media (min-width: 992px) {
+    margin-bottom: 0;
+    font-size: calc(var(--ui-subtitle-size) * 0.8888);
+  }
+}
+
+.form {
+
+  @media (min-width: 992px) {
+    padding: 0;
+    max-width: 570px;
+    margin: 0 auto;
+  }
+
+  &__item {
+    font-size: 0;
+
+    @media (min-width: 992px) {
+      margin-bottom: 15px;
+    }
+  }
+
+  &__field {
+    border: 1px solid var(--ui-light-shade-color);
+    background-color: transparent;
+    font-size: var(--ui-text-size);
+    border-radius: 0;
+    color: var(--ui-light-shade-color);
+
+    &::placeholder {
+      color: var(--ui-light-shade-color);
+    }
+
+    @media (min-width: 992px) {
+      margin-top: 0;
+    }
+  }
+
+  &__button {
+
+    @media (min-width: 992px) {
+      margin-top: 0;
+    }
+  }
+}
