--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,36 @@
 @import "wireframe-zapdos-cta/src/style.css";
 
 /* start here */
+
+.section {
+
+  @media (min-width: 992px) {
+    padding-top: 170px;
+    padding-bottom: 519px;
+  }
+
+  @media (min-width: 768px) {
+    padding-bottom: 110px;
+  }
+}
+
+.title {
+  font-size: calc(var(--ui-block-title-size) * 1.75);
+  text-transform: uppercase;
+  margin-bottom: 70px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 70px;
+  }
+}
+
+.description {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 760px;
+  color: #a6d2f5;/* in psd */
+
+  @media (min-width: 768px) {
+    margin-bottom: 70px;
+  }
+}
