--- a/src/style.css
+++ b/src/style.css
@@ -28,10 +28,9 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 760px;
-  color: #a6d2f5;/* in psd */
 
   &:nth-child(2) {
-    color: #f2c3fd;
+    color: #a6d2f5;
   }
 
   @media (min-width: 768px) {
